--- a/UI template/index.html
+++ b/UI template/index.html
@@ -103,16 +103,16 @@
                                           <h3>Your Company information</h3>
                                        </div>
                                        <div class="col-md-12">
-                                          <input class="transfot_form" placeholder="Location" type="text" name="Location">
+                                          <input class="transfot_form" placeholder="Company Name" type="text" name="Location", id="company_name">
                                        </div>
                                        <div class="col-md-12">
-                                          <input class="transfot_form" placeholder="To destination" type="text" name="To destination">
+                                          <input class="transfot_form" placeholder="Problem" type="text" name="To destination", id="problem">
                                        </div>
                                        <div class="col-md-12">
-                                          <input class="transfot_form" placeholder="Email" type="text" name="Email">
+                                          <input class="transfot_form" placeholder="Solution" type="text" name="Email", id="solution">
                                        </div>
                                        <div class="col-md-12">
-                                          <input class="transfot_form" placeholder="Contact Number" type="text" name="Contact Number">
+                                          <input class="transfot_form" placeholder="Location" type="text" name="Contact Number", id="location">
                                        </div>
                                        <div class="col-md-12">
                                           <button class="get_now">Get Now quote</button>
